// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default-config Returns correct values for BIOMAGE production 1`] = `
Object {
  "adminSub": "032abd44-0cd3-4d58-af21-850ca0b95ac7",
  "api": Object {
    "prefix": "/",
  },
  "awsAccountId": "242905224710",
  "awsBatchIgnoreSSLCertificate": false,
  "awsRegion": "eu-west-1",
  "cachingEnabled": true,
  "clusterEnv": "production",
  "cognitoISP": Object {
    "listUserPools": Object {
      "promise": [MockFunction],
    },
  },
  "corsOriginUrl": Array [
    "https://sandbox.elabjournal.com",
    "https://elabjournal.com",
    "https://localhost:5000",
  ],
  "datadogApiKey": "",
  "datadogAppKey": "",
  "domainName": "localhost:5000",
  "emailDomainName": "https://localhost:5000",
  "pipelineInstanceConfigUrl": "https://raw.githubusercontent.com/hms-dbmi-cellenics/releases/master/production/pipeline.yaml",
  "pipelineNamespace": "pipeline-default",
  "podName": "local",
  "port": 3000,
  "publicApiUrl": "https://api.localhost:5000",
  "rdsSandboxId": "default",
  "sandboxId": "default",
  "workerNamespace": "worker-default",
}
`;

exports[`default-config Returns correct values for HMS production 1`] = `
Object {
  "adminSub": "a01e8bcc-c9a2-4c56-bd66-39de93764be8",
  "api": Object {
    "prefix": "/",
  },
  "awsAccountId": "160782110667",
  "awsBatchIgnoreSSLCertificate": false,
  "awsRegion": "eu-west-1",
  "cachingEnabled": true,
  "clusterEnv": "production",
  "cognitoISP": mockConstructor {
    "CALL_EVENTS_BUBBLE": [MockFunction],
    "MONITOR_EVENTS_BUBBLE": [MockFunction],
  },
  "corsOriginUrl": Array [
    "https://sandbox.elabjournal.com",
    "https://elabjournal.com",
    "https://localhost:5000",
  ],
  "datadogApiKey": "",
  "datadogAppKey": "",
  "domainName": "localhost:5000",
  "emailDomainName": "https://localhost:5000",
  "pipelineInstanceConfigUrl": "https://raw.githubusercontent.com/hms-dbmi-cellenics/releases/master/production/pipeline.yaml",
  "pipelineNamespace": "pipeline-default",
  "podName": "local",
  "port": 3000,
  "publicApiUrl": "https://api.localhost:5000",
  "rdsSandboxId": "default",
  "sandboxId": "default",
  "workerNamespace": "worker-default",
}
`;
